.apex/unpackaged/objects/Mix__c.object
<CustomObject>
    <description>A custom collection of tracks for a customer that will be pressed onto vinyl.</description>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contact purchasing the mix.</description>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mixes</relationshipLabel>
        <relationshipName>Mixes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Genre__c</fullName>
        <description>Primary genre of the mix.</description>
        <label>Primary Genre</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Genre__c</fullName>
        <description>Secondary genre of the mix.</description>
        <label>Secondary Genre</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Mix</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mixes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>